# retail-analyst-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
agent/: bq.py  cli.py  config.py  context.py  graph.py  llm.py  retrieval.py  runtime.py  smoke.py  store.py  store_pg.py  trace.py
agent/safety/: pii.py  sql_guard.py
agent/tools/: __init__.py  memory.py  reports.py  schema.py  sql.py
data/: golden_examples.json  schema_snapshot.txt
data/lake/: aov-by-channel.json  average-order-value.json  avg-delivery-time.json  avg-items-per-order.json  avg-session-depth.json  cancellation-rate.json  cart-abandonment-rate.json  catalog-margin-products.json  category-mix-shift.json  conversion-by-session-source.json  dc-shipped-volume.json  first-order-value-vs-repeat.json  fulfillment-lag-trend.json  inventory-on-hand.json  mom-revenue-growth.json  new-signups-trend.json  order-status-breakdown.json  profit-margin-by-category.json  refund-value-trend.json  repeat-purchase-rate.json  (+13 more)
docs/: architecture.md  transcript.md
evals/: questions.yaml  report.md  retrieval-report.md  retrieval_eval.py  retrieval_questions.yaml  run.py
prompts/: analyst-agent-instructions.prompt  policy.md
scripts/: hydrate_index.py  validate_lake.py
tests/: test_confirm_gate.py  test_context.py  test_pii.py  test_policy_live.py  test_report_targets.py  test_sql_guard.py  test_store.py  test_store_memory.py  test_trace.py
(+4 files in other folders)
